[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmrunner"
version = "0.1.1"
description = "CLI to manage local language model inference endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Julian Schweigert"}
]
dependencies = [
  "appdirs>=1.4",
  "requests>=2.0",
]

[project.optional-dependencies]
llamacppbindings = [
  "llama-cpp-python[server]",
]

[project.scripts]
lmrunner = "lmrunner.lm_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
